# purethermal1-uvc-capture

./: .gitignore  Makefile.am  build_nano_thermal_app.sh  build_pi_thermal_app.sh  configure.ac  readme.md  readme_groupgets.md  readme_irdata.md
avfoundation/: readme.md
avfoundation/PT1Recorder/: AVCaptureDeviceFormat_AVRecorderAdditions.h  AVCaptureDeviceFormat_AVRecorderAdditions.m  AVFrameRateRange_AVRecorderAdditions.h  AVFrameRateRange_AVRecorderAdditions.m  AVRecorder-Info.plist  AVRecorder-Prefix.pch  AVRecorderDocument.h  AVRecorderDocument.m  main.m
avfoundation/PT1Recorder.xcodeproj/: project.pbxproj
linux/: Makefile.am  configure.ac  pt1-v4l2-grab.c
mediafoundation/PureThermal/: Device.cpp  Device.h  LEPTON_Types.h  PureThermal.cpp  PureThermal.sln  PureThermal.vcxproj  PureThermal.vcxproj.filters  pch.h
python/: Makefile.am  irdatav12b.py  irdatav15c.py  irdatav16b.py  opencv-capture.py  readme.md  tiffreadv4.m  uvc-deviceinfo.py  uvc-radiometry.py  uvctypes.py
python/Archive/: IR_Data.py  ir_pi_touchscreen.ui  ir_v3.ui  ir_v6.ui  irdatav15c.py  irdatav16c.py  irdatav5.py  postScriptIRv3.py  postScriptIRv8.py  setup.py  uvc-deviceinfo.py  uvc-radiometry.py
python/IR Data Viewer/: qt.conf
python/IR_Data/: irDataViewerv10.py  ir_v7.ui  irdatav16.5.py
python/IR_Data_Viewer/: irDataViewerv10.spec
stl_files/: leptoncasebotv4.stl  leptoncasetopv4.stl
tracking/: ir-tracking.py
ui_software/Archive/: ir_post.ui  irdatav15d.py  postScriptIRv7.py  (+1 more)
v4l2/: Makefile.am  autogen.sh  configure.ac
v4l2/uvcdynctrl/: ctrl_gen.py  load.sh  pt1.xml
(+43 files in other folders)
